--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-brand></app-brand>
 <app-firewith-team></app-firewith-team>
 <app-services></app-services>
+<app-firewith-contact></app-firewith-contact>
+<!-- <app-footer></app-footer> -->
