--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -5,30 +5,9 @@
         days and future
         industry </p>
 
-    <div class="list-card">
-        <div class="card 1">
-            <div class="card_image">
-                <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
-          
-            </div>
-            <p class="txt-card">b</p>
-        </div>
-        <div class="card 1">
-            <div class="card_image">
-                <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
-        
-            </div>
-            <p class="txt-card">a</p>
-        </div>
-        <div class="card 1">
-            <div class="card_image"> <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> </div>
-            <p class="txt-card">c</p>
-
-        </div>
-    </div>
     <div>
         <div class="box-packages">
-            <div class="box-one ml-55">
+            <div class="box-one ml-55 bg-service-1">
                 <div class="lining-text">
                     <div>
                         <h1>Normal Packages</h1>
@@ -48,7 +27,7 @@
                 </div>
             </div>
 
-            <div class="box-one">
+            <div class="box-one bg-service-2">
                 <div class="lining-text">
                     <div>
                         <h1>Premium Packages</h1>
@@ -70,7 +49,7 @@
                 </div>
             </div>
 
-            <div class="box-one">
+            <div class="box-one bg-service-3">
                 <div class="lining-text">
                     <div>
                         <h1>Custom Packages</h1>
