--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -2,63 +2,11 @@
     width: 90%;
     margin-right: 5%;
     margin-left: 5%;
-    margin-bottom: 15%;
+    margin-bottom: 5%;
     padding-top: 3%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
-    .list-card {
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 3%;
-        margin-bottom: 6%;
-        .card {
-            width: 15%;
-            height: 150%;
-            border-radius: 40px;
-            cursor: pointer;
-            transition: 0.4s;
-            display: flex;
-            justify-content: center;
-            .card_image {
-                width: 100%;
-                height: 100%;
-                border-radius: 40px;
-            }
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: 40px;
-                object-fit: cover;
-            }
-            .txt-card {
-                font-family: poppins-semibold;
-                align-self: center;
-                z-index: 5;
-                // color: white;
-                font-size: 14px;
-                position: absolute;
-            }
-        }
 
-        .card:hover {
-            transform: scale(0.9, 0.9);
-            box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.25), -2px -2px 3px 3px rgba(0, 0, 0, 0.22);
-        }
-
-        .title-white {
-            color: white;
-        }
-
-        .title-black {
-            color: black;
-        }
-    }
-
-    p {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
     .txt-title {
         font-family: poppins-med;
         font-style: normal;
@@ -68,6 +16,7 @@
         letter-spacing: 0.09;
     }
     .txt-description {
+        width: 50%;
         font-family: poppins-light;
         font-weight: 500;
         font-size: 16px;
@@ -98,12 +47,18 @@
             height: auto;
             display: flex;
             flex-direction: column;
+            color: white;
+            opacity: 1;
         }
         h1 {
             font-size: 32px;
+            color: white;
+            text-shadow: 1px .5px 2px#a9a9a9;
         }
         h3 {
             font-size: 16px;
+            color: white;
+            text-shadow: 1px .5px 2px#a9a9a9;
         }
         .first-h3 {
             margin-top: 7%;
@@ -115,6 +70,33 @@
             position: absolute;
         }
     }
+
+    .bg-service-1 {
+        background-image: url(../../assets/images/service-1.jpg);
+        background-position: center center;
+    }
+
+    .bg-service-2 {
+        background-image: url(../../assets/images/service-2.jpg);
+        background-position: center center;
+    }
+
+    .bg-service-3 {
+        background-image: url(../../assets/images/service-3.jpg);
+        background-position: center center;
+    }
+
+    .btn-outline-dark {
+        color: white;
+        border-color: white;
+        background-color: transparent;
+        transition: transform 0.2s;
+        box-shadow: white;
+    }
+
+    .btn-outline-dark:hover {
+        transform: scale(1.1);
+    }
 }
 
 @media only screen and (min-width: 340px) and (max-width: 600px) {
@@ -122,71 +104,17 @@
         display: none;
     }
     .firewith-service {
-        width: 96%;
-        margin-right: 2%;
-        margin-left: 2%;
+        width: 93%;
+        margin-right: 3.5%;
+        margin-left: 3.5%;
         padding-top: 3%;
-        height: 100vh;
         display: block;
 
-        .list-card {
-            display: flex;
-            justify-content: space-evenly;
-            .card {
-                width: 30%;
-                min-height: 110px;
-                height: auto;
-                margin-top: 30px;
-                border-radius: 20px;
-                cursor: pointer;
-                transition: 0.4s;
-                .card_image {
-                    border-radius: 20px;
-                }
-                img {
-                    border-radius: 20px;
-                    object-fit: cover;
-                }
-            }
-
-            @media only screen and (max-width: 330px) {
-                .firewith-service {
-                    width: 96%;
-                    margin-right: 2%;
-                    margin-left: 2%;
-                    padding-top: 3%;
-                    height: 100vh;
-                    display: block;
-
-                    .list-card {
-                        display: flex;
-                        justify-content: space-evenly;
-                        .card {
-                            width: 30%;
-                            min-height: 50px;
-                            border-radius: 5px;
-                        }
-                    }
-                }
-            }
-
-            .card:hover {
-                transform: scale(0.9, 0.9);
-                box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.25), -2px -2px 3px 3px rgba(0, 0, 0, 0.22);
-            }
-
-            .title-white {
-                color: white;
-            }
-
-            .title-black {
-                color: black;
-            }
-        }
         p {
             margin-top: 0;
             margin-bottom: 0;
         }
+        
         .txt-title {
             font-family: poppins-med;
             font-style: normal;
@@ -196,6 +124,7 @@
             letter-spacing: 0.09;
         }
         .txt-description {
+            width: 95%;
             font-family: poppins-light;
             font-weight: 500;
             font-size: 11px;
