--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,5 @@ body {
     font-family: poppins-bold;
     src: url(assets/fonts/Poppins-Bold.ttf) format("truetype");
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
