--- a/src/app/firewith-contact/firewith-contact.component.html
+++ b/src/app/firewith-contact/firewith-contact.component.html
@@ -15,6 +15,6 @@
         <label class="txt-label">Deskripsikan Problem Anda</label>
         <textarea class="form-control" placeholder="Tuliskan Keinginan Anda"></textarea>
 
-        <button class="mat-raised-button">Kirim</button>
+        <button mat-raised-button  class="btn-send">Kirim</button>
     </div>
 </div>
