--- a/src/app/firewith-contact/firewith-contact.component.scss
+++ b/src/app/firewith-contact/firewith-contact.component.scss
@@ -2,7 +2,7 @@
     width: 90%;
     margin-right: 5%;
     margin-left: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 15%;
     padding-top: 3%;
     .txt-title {
         font-family: poppins-med;
@@ -26,6 +26,18 @@
             margin-top: 3%;
             margin-bottom: 2px;
         }
+    }
+
+    .btn-send{
+        margin-top: 3%;
+        margin-bottom: 3%;
+        background-color: #007bff;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .btn-send:active{
+        outline: 0;
     }
 }
 @media only screen and (max-width: 600px) {
