--- a/src/app/homepage/brand/brand.component.scss
+++ b/src/app/homepage/brand/brand.component.scss
@@ -119,9 +119,14 @@
     }
 }
 
-
 @media only screen and (max-width: 600px) {
     .brand-section {
+        .brand-navbar {
+            padding-top: 10%;
+            .brand-navbar-end {
+                display: none !important;
+            }
+        }
         .mobile-navbar {
             width: 100%;
             height: 29px;
@@ -133,6 +138,7 @@
             padding-bottom: 3%;
             background-color: black;
             display: flex;
+            z-index: 10;
             justify-content: space-around;
             .txt-section {
                 font-size: 12px;
@@ -144,9 +150,7 @@
                 font-size: 12px;
             }
         }
-        .brand-navbar-end {
-            display: none !important;
-        }
+
         .branding-box-center {
             width: 80%;
             margin-left: 10%;
