--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -6,7 +6,7 @@
     padding-top: 3%;
     display: flex;
     flex-direction: column;
-
+    
     .txt-title {
         font-family: poppins-med;
         font-style: normal;
@@ -56,9 +56,11 @@
             text-shadow: 1px .5px 2px#a9a9a9;
         }
         h3 {
+            font: 400 16px poppins, "Helvetica Neue", sans-serif;
             font-size: 16px;
             color: white;
             text-shadow: 1px .5px 2px#a9a9a9;
+            margin: 0;
         }
         .first-h3 {
             margin-top: 7%;
@@ -98,6 +100,7 @@
         transform: scale(1.1);
     }
 }
+
 
 @media only screen and (min-width: 340px) and (max-width: 600px) {
     .isDesktop {
