--- a/src/app/firewith-contact/firewith-contact.component.scss
+++ b/src/app/firewith-contact/firewith-contact.component.scss
@@ -32,6 +32,7 @@
         margin-top: 3%;
         margin-bottom: 3%;
         background-color: #007bff;
+        color: white;
         padding-left: 5%;
         padding-right: 5%;
     }
